--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -18,6 +18,7 @@
         z-index: 1;
 
         @media screen and (max-width: 1599px) {
+            padding-bottom: 62px;
             width: 600px;
         }
 
